test: add new test markups for js lng
[task: #dgqzj]

--- a/test/languages/markup/javascript/multiline-comment.html
+++ b/test/languages/markup/javascript/multiline-comment.html
@@ -1,1 +1,5 @@
-<pre><code class="cc-container"><span class="cc-comment">/* multiline */</span></code></pre>
+<pre><code class="cc-container"><span class="cc-comment">/*
+    line 1
+    line ...
+    line N
+*/</span></code></pre>
