fix: Change masks tpl, rework core theme
task: #bcbpc

--- a/test/languages/markup/javascript/arrow-function.html
+++ b/test/languages/markup/javascript/arrow-function.html
@@ -4,5 +4,5 @@
     <span class="cc-keyword">let</span> hours <span class="cc-operator">=</span> date.getHours();
     <span class="cc-keyword">let</span> minutes <span class="cc-operator">=</span> date.getMinutes();
 
-    <span class="cc-keyword">return</span> <span class="cc-template">`<span class="cc-template-mask-0">${hours}</span>:<span class="cc-template-mask-0">${minutes}</span>`</span>;
+    <span class="cc-keyword">return</span> <span class="cc-template">`<span class="cc-mask-1">${hours}</span>:<span class="cc-mask-1">${minutes}</span>`</span>;
 };</code></pre>
