--- a/test/languages/markup/javascript/class.html
+++ b/test/languages/markup/javascript/class.html
@@ -4,7 +4,7 @@
     }
 
     say(text) {
-        alert(<span class="cc-template">`<span class="cc-template-mask-0">${<span class="cc-keyword">this</span>.name}</span> say: <span class="cc-template-mask-0">${text}</span>`</span>);
+        alert(<span class="cc-template">`<span class="cc-mask-1">${<span class="cc-keyword">this</span>.name}</span> say: <span class="cc-mask-1">${text}</span>`</span>);
     }
 }
 
