--- a/test/languages/markup/javascript/keywords.html
+++ b/test/languages/markup/javascript/keywords.html
@@ -1,4 +1,4 @@
-<pre><code class="cc-container"><span class="cc-keyword">function</span> test() {
+<pre><code class="cc-container"><span class="cc-keyword">function</span> <span class="cc-mask-2">test</span>() {
     [<span class="cc-string">'test'</span>, <span class="cc-string">'keywords'</span>].forEach((name, index) <span class="cc-operator">=></span> {
         <span class="cc-keyword">const</span> regExp <span class="cc-operator">=</span> <span class="cc-keyword">new</span> <span class="cc-builtin">RegExp</span>(<span class="cc-string">/test/</span>, <span class="cc-string">'gm'</span>);
         <span class="cc-keyword">var</span> match;
