--- a/test/languages/markup/javascript/template-string.html
+++ b/test/languages/markup/javascript/template-string.html
@@ -1,1 +1,1 @@
-<pre><code class="cc-container"><span class="cc-template">`string <span class="cc-template-mask-0">${foo <span class="cc-operator">+</span> <span class="cc-template">`str<span class="cc-template-mask-0">${<span class="cc-primitive">undefined</span>}</span>ing`</span>}</span>`</span>;</code></pre>
+<pre><code class="cc-container"><span class="cc-template">`string <span class="cc-mask-1">${foo <span class="cc-operator">+</span> <span class="cc-template">`str<span class="cc-mask-1">${<span class="cc-primitive">undefined</span>}</span>ing`</span>}</span>`</span>;</code></pre>
