feat: Add Object attr highlight
task: #ad3e6

--- a/test/languages/markup/javascript/class.html
+++ b/test/languages/markup/javascript/class.html
@@ -1,4 +1,4 @@
-<pre><code class="cc-container"><span class="cc-keyword">class</span> !!User!! {
+<pre><code class="cc-container"><span class="cc-keyword">class</span> User {
     <span class="cc-keyword">constructor</span>(name) {
         <span class="cc-keyword">this</span>.name <span class="cc-operator">=</span> name;
     }
