--- a/test/languages/markup/javascript/keywords.html
+++ b/test/languages/markup/javascript/keywords.html
@@ -1,15 +1,15 @@
 <pre><code class="cc-container"><span class="cc-keyword">function</span> <span class="cc-mask-2">test</span>() {
-    [<span class="cc-string">'test'</span>, <span class="cc-string">'keywords'</span>].forEach((name, index) <span class="cc-operator">=></span> {
+    [<span class="cc-string">'test'</span>, <span class="cc-string">'keywords'</span>].<span class="cc-mask-3">forEach</span>((name, index) <span class="cc-operator">=></span> {
         <span class="cc-keyword">const</span> regExp <span class="cc-operator">=</span> <span class="cc-keyword">new</span> <span class="cc-builtin">RegExp</span>(<span class="cc-string">/test/</span>, <span class="cc-string">'gm'</span>);
         <span class="cc-keyword">var</span> match;
 
-        <span class="cc-keyword">while</span> (match <span class="cc-operator">=</span> regExp.exec(name)) {
+        <span class="cc-keyword">while</span> (match <span class="cc-operator">=</span> regExp.<span class="cc-mask-3">exec</span>(name)) {
             <span class="cc-keyword">let</span> token <span class="cc-operator">=</span> <span class="cc-keyword">new</span> Token(match[<span class="cc-number">0</span>], match.index);
 
             <span class="cc-keyword">if</span> (getTokenIndex(token) <span class="cc-operator">>=</span> <span class="cc-number">0</span>) {
-                tokens.splice(token.index, <span class="cc-number">0</span>, token);
+                tokens.<span class="cc-mask-3">splice</span>(token.index, <span class="cc-number">0</span>, token);
             } <span class="cc-keyword">else</span> {
-                tokens[<span class="cc-builtin">Math</span>.abs(token.index)] <span class="cc-operator">=</span> token;
+                tokens[<span class="cc-builtin">Math</span>.<span class="cc-mask-3">abs</span>(token.index)] <span class="cc-operator">=</span> token;
             }
         }
     });
