--- a/test/languages/markup/javascript/method-call.html
+++ b/test/languages/markup/javascript/method-call.html
@@ -1,1 +1,1 @@
-text.next().wait().continue(0);
+<pre><code class="cc-container">text.<span class="cc-mask-3">next</span>().<span class="cc-mask-3">wait</span>().<span class="cc-mask-3">continue</span>(<span class="cc-number">0</span>);</code></pre>
