--- a/test/languages/markup/javascript/object-attr.html
+++ b/test/languages/markup/javascript/object-attr.html
@@ -1,6 +1,6 @@
-{
-  key0: value,
-  key1: value,
-  'key-2': value,
-  key-3: false ? undefined : true
-}
+<pre><code class="cc-container">{
+  <span class="cc-mask-4">key0</span><span class="cc-operator">:</span> value,
+  <span class="cc-mask-4">key1</span><span class="cc-operator">:</span> value,
+  <span class="cc-string">'key-2'</span><span class="cc-operator">:</span> value,
+  <span class="cc-mask-4">key_3</span><span class="cc-operator">:</span> <span class="cc-primitive">false</span> <span class="cc-operator">?</span> <span class="cc-primitive">undefined</span> <span class="cc-operator">:</span> <span class="cc-primitive">true</span>
+}</code></pre>
