--- a/test/languages/markup/javascript/arrow-function.html
+++ b/test/languages/markup/javascript/arrow-function.html
@@ -1,8 +1,8 @@
 <pre><code class="cc-container"><span class="cc-keyword">const</span> sum <span class="cc-operator">=</span> (a, b) <span class="cc-operator">=></span> a <span class="cc-operator">+</span> b;
 <span class="cc-keyword">const</span> getTime <span class="cc-operator">=</span> () <span class="cc-operator">=></span> {
     <span class="cc-keyword">let</span> date <span class="cc-operator">=</span> <span class="cc-keyword">new</span> <span class="cc-builtin">Date</span>();
-    <span class="cc-keyword">let</span> hours <span class="cc-operator">=</span> date.getHours();
-    <span class="cc-keyword">let</span> minutes <span class="cc-operator">=</span> date.getMinutes();
+    <span class="cc-keyword">let</span> hours <span class="cc-operator">=</span> date.<span class="cc-mask-3">getHours</span>();
+    <span class="cc-keyword">let</span> minutes <span class="cc-operator">=</span> date.<span class="cc-mask-3">getMinutes</span>();
 
     <span class="cc-keyword">return</span> <span class="cc-template">`<span class="cc-mask-1">${hours}</span>:<span class="cc-mask-1">${minutes}</span>`</span>;
 };</code></pre>
