feat: Add object func & class names highlight for js
task: #ad3e0, #ad3e3

--- a/test/languages/markup/javascript/class.html
+++ b/test/languages/markup/javascript/class.html
@@ -1,11 +1,11 @@
-<pre><code class="cc-container"><span class="cc-keyword">class</span> User {
-    <span class="cc-keyword">constructor</span>(name) {
-        <span class="cc-keyword">this</span>.name <span class="cc-operator">=</span> name;
+<pre><code class="cc-container"><span class="cc-keyword">class</span> <span class="cc-mask-3">User</span> {
+    <span class="cc-mask-2">constructor</span>(name) {
+        <span class="cc-keyword">this</span>.<span class="cc-mask-1">name</span> <span class="cc-operator">=</span> name;
     }
 
-    say(text) {
-        alert(<span class="cc-template">`<span class="cc-mask-1">${<span class="cc-keyword">this</span>.name}</span> say: <span class="cc-mask-1">${text}</span>`</span>);
+    <span class="cc-mask-2">say</span>(text) {
+        <span class="cc-mask-2">alert</span>(<span class="cc-template">`<span class="cc-mask-1">${<span class="cc-keyword">this</span>.<span class="cc-mask-1">name</span>}</span> say: <span class="cc-mask-1">${text}</span>`</span>);
     }
 }
 
-<span class="cc-keyword">let</span> user <span class="cc-operator">=</span> <span class="cc-keyword">new</span> User(<span class="cc-string">"Kevin"</span>);</code></pre>
+<span class="cc-keyword">let</span> user <span class="cc-operator">=</span> <span class="cc-keyword">new</span> <span class="cc-mask-3">User</span>(<span class="cc-string">"Kevin"</span>);</code></pre>
