fix: data processing rewritten to "masks"
Literals and statements renamed expressions and keywords. The list of names is now single, these are masks.
task: #eww6x

--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="example/atom.css">
         <script src="example/highlight.js"></script>
 
-        <link rel="stylesheet" href="../dist/themes/atom.css">
+        <link rel="stylesheet" href="../dist/themes/dark.css">
         <script src="../dist/codecolor.js"></script>
         <style>
             .layer {
