--- a/test/languages/markup/javascript/object-attr.html
+++ b/test/languages/markup/javascript/object-attr.html
@@ -1,6 +1,6 @@
 <pre><code class="cc-container">{
-  <span class="cc-mask-3">key0</span><span class="cc-operator">:</span> value,
-  <span class="cc-mask-3">key1</span><span class="cc-operator">:</span> value,
+  <span class="cc-constant">key0</span><span class="cc-operator">:</span> value,
+  <span class="cc-constant">key1</span><span class="cc-operator">:</span> value,
   <span class="cc-string">'key-2'</span><span class="cc-operator">:</span> value,
-  <span class="cc-mask-3">key_3</span><span class="cc-operator">:</span> <span class="cc-primitive">false</span> <span class="cc-operator">?</span> <span class="cc-primitive">undefined</span> <span class="cc-operator">:</span> <span class="cc-primitive">true</span>
+  <span class="cc-constant">key_3</span><span class="cc-operator">:</span> <span class="cc-constant">false</span> <span class="cc-operator">?</span> <span class="cc-constant">undefined</span> <span class="cc-operator">:</span> <span class="cc-constant">true</span>
 }</code></pre>
