--- a/test/languages/markup/javascript/method-call.html
+++ b/test/languages/markup/javascript/method-call.html
@@ -1,1 +1,1 @@
-<pre><code class="cc-container">text.<span class="cc-mask-2">next</span>().<span class="cc-mask-2">wait</span>().<span class="cc-mask-2">continue</span>(<span class="cc-number">0</span>);</code></pre>
+<pre><code class="cc-container">text.<span class="cc-entity">next</span>().<span class="cc-entity">wait</span>().<span class="cc-entity">continue</span>(<span class="cc-constant">0</span>);</code></pre>
