feat: add new themes
- material-dark
- material-light
- neutral-dark
- neutral-light

core theme rename to default

task: #eww77

--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,12 @@
         <link rel="stylesheet" href="example/atom.css">
         <script src="example/highlight.js"></script>
 
-        <link rel="stylesheet" href="../dist/themes/dark.css">
+        <!-- <link rel="stylesheet" href="../dist/themes/default.css"> -->
+        <!-- <link rel="stylesheet" href="../dist/themes/material-dark.css"> -->
+        <!-- <link rel="stylesheet" href="../dist/themes/material-light.css"> -->
+        <!-- <link rel="stylesheet" href="../dist/themes/neutral-dark.css"> -->
+        <!-- <link rel="stylesheet" href="../dist/themes/neutral-light.css"> -->
+        <link rel="stylesheet" href="../dist/themes/default.css">
         <script src="../dist/codecolor.js"></script>
         <style>
             .layer {
