fix: Check & fix js lang regExp
task: #f0kgv

--- a/example/index.html
+++ b/example/index.html
@@ -14,7 +14,7 @@
         <!-- <link rel="stylesheet" href="../dist/themes/neutral-dark.css"> -->
         <!-- <link rel="stylesheet" href="../dist/themes/neutral-light.css"> -->
         <link rel="stylesheet" href="../dist/themes/default.css">
-        <script src="../dist/test.js"></script>
+        <script src="../dist/codecolor.js"></script>
         <style>
             .layer {
                 margin: 20px auto;
