feat: add JSON language
task: #bqta4

--- a/test/languages/markup/javascript/multiline-comment.html
+++ b/test/languages/markup/javascript/multiline-comment.html
@@ -1,5 +1,5 @@
 <pre><code class="cc-container"><span class="cc-comment">/*
     line 1
-    line ...
+    line ... // 123
     line N
 */</span></code></pre>
