--- a/test/languages/markup/css/url.html
+++ b/test/languages/markup/css/url.html
@@ -1,6 +1,6 @@
-<pre><code class="cc-container"><span class="cc-variable">div</span> { background: <span class="cc-entity">url</span>(<span class="cc-string">"foo/bar/baz.jpg"</span>) }
-<span class="cc-variable">div</span> { background: <span class="cc-entity">url</span>(<span class="cc-string">'foo/bar/baz.jpg'</span>) }
-<span class="cc-variable">div</span> { background: <span class="cc-entity">url</span>(<span class="cc-string">foo/bar/baz.jpg</span>) }
-<span class="cc-variable">div</span> { background-image: <span class="cc-entity">url</span>(<span class="cc-string">data:image/png;base64,TWFuIGlzIGRpc3=</span>) }
-<span class="cc-variable">div</span> { background-image: <span class="cc-entity">url</span>(<span class="cc-string">"data:image/png;base64,TWFuIGlzIGRpc3="</span>) }
-<span class="cc-variable">div</span> { background-image: <span class="cc-entity">url</span>(<span class="cc-string">'data:image/png;base64,TWFuIGlzIGRpc3='</span>) }</code></pre>
+<pre><code class="cc-container"><span class="cc-variable">div</span> { background: <span class="cc-operator">url</span>(<span class="cc-string">"foo/bar/baz.jpg"</span>) }
+<span class="cc-variable">div</span> { background: <span class="cc-operator">url</span>(<span class="cc-string">'foo/bar/baz.jpg'</span>) }
+<span class="cc-variable">div</span> { background: <span class="cc-operator">url</span>(<span class="cc-string">foo/bar/baz.jpg</span>) }
+<span class="cc-variable">div</span> { background-image: <span class="cc-operator">url</span>(<span class="cc-string">data:image/png;base64,TWFuIGlzIGRpc3=</span>) }
+<span class="cc-variable">div</span> { background-image: <span class="cc-operator">url</span>(<span class="cc-string">"data:image/png;base64,TWFuIGlzIGRpc3="</span>) }
+<span class="cc-variable">div</span> { background-image: <span class="cc-operator">url</span>(<span class="cc-string">'data:image/png;base64,TWFuIGlzIGRpc3='</span>) }</code></pre>
