--- a/test/languages/markup/json/complex.html
+++ b/test/languages/markup/json/complex.html
@@ -1,10 +1,10 @@
 <pre><code class="cc-container">{
-    <span class="cc-variable">"testtrue"</span>: <span class="cc-constant">true</span>,
+    <span class="cc-variable">"testtrue"</span>: <span class="cc-operator">true</span>,
     <span class="cc-variable">"number1"</span>: <span class="cc-constant">123</span>,
     <span class="cc-variable">"number2"</span>: <span class="cc-constant">0.123</span>,
     <span class="cc-variable">"string"</span>: <span class="cc-string">"string"</span>,
     <span class="cc-variable">"arrays"</span>: {
-        <span class="cc-variable">"a1"</span>: [<span class="cc-constant">1</span>, <span class="cc-constant">false</span>, <span class="cc-string">"string"</span>],
+        <span class="cc-variable">"a1"</span>: [<span class="cc-constant">1</span>, <span class="cc-operator">false</span>, <span class="cc-string">"string"</span>],
         <span class="cc-variable">"a2"</span>: [<span class="cc-string">""</span>, <span class="cc-string">""</span>, <span class="cc-string">""</span>],
         <span class="cc-variable">"a3"</span>: [<span class="cc-constant">1</span>, <span class="cc-constant">2</span>, <span class="cc-constant">3</span>]
     }
