--- a/test/languages/markup/css/pseudo-selector.html
+++ b/test/languages/markup/css/pseudo-selector.html
@@ -1,4 +1,4 @@
-<pre><code class="cc-container"><span class="cc-variable">li</span><span class="cc-constant">:not</span>(<span class="cc-constant">.red</span>){}
-<span class="cc-variable">li</span><span class="cc-constant">:not</span>(<span class="cc-constant">.red</span>):<span class="cc-variable">not</span>(<span class="cc-constant">.green</span>){}
+<pre><code class="cc-container"><span class="cc-variable">li</span><span class="cc-constant">:not</span>(.red){}
+<span class="cc-variable">li</span><span class="cc-constant">:not</span>(.red)<span class="cc-constant">:not</span>(.green){}
 <span class="cc-variable">li</span><span class="cc-constant">::after</span>{}
 <span class="cc-entity">#id</span> <span class="cc-variable">li</span><span class="cc-constant">.test</span><span class="cc-constant">::after</span>{}</code></pre>
