feat: add yaml lang & fix other languages regExps
task: #bqta8

--- a/example/index.html
+++ b/example/index.html
@@ -37,7 +37,7 @@
 
         <div class="layer">
             <div class="container">
-                <pre><code id="code1" class="scss"></code></pre>
+                <pre><code id="code1" class="yaml"></code></pre>
             </div>
 
             <div class="container">
@@ -70,7 +70,8 @@
                         // fetch('../dist/languages/javascript.json')
                         // fetch('../dist/languages/json.json')
                         // fetch('../dist/languages/css.json')
-                        fetch('../dist/languages/scss.json')
+                        // fetch('../dist/languages/scss.json')
+                        fetch('../dist/languages/yaml.json')
                             .then(response => response.json())
                             .then(jsonResponse => {
                                 try {
