--- a/test/languages/markup/javascript/class.html
+++ b/test/languages/markup/javascript/class.html
@@ -4,7 +4,7 @@
     }
 
     <span class="cc-entity">say</span>(text) {
-        <span class="cc-entity">alert</span>(<span class="cc-template">`<span class="cc-variable">${<span class="cc-keyword">this</span>.<span class="cc-variable">name</span>}</span> say: <span class="cc-variable">${text}</span>`</span>);
+        <span class="cc-entity">alert</span>(<span class="cc-template">`<span class="cc-source"><span class="cc-variable">${<span class="cc-source"><span class="cc-keyword">this</span>.<span class="cc-variable">name</span></span>}</span></span> say: <span class="cc-source"><span class="cc-variable">${<span class="cc-source">text</span>}</span></span>`</span><span class="cc-variable">${<span class="cc-source">text</span>}</span>`);
     }
 }
 
