fix: Improvements in the new scheme of variables, fixed bug with json
task: #h58b2, #h8zpm

--- a/example/index.html
+++ b/example/index.html
@@ -14,7 +14,7 @@
         <!-- <link rel="stylesheet" href="../dist/themes/neutral-dark.css"> -->
         <!-- <link rel="stylesheet" href="../dist/themes/neutral-light.css"> -->
         <!-- <link rel="stylesheet" href="../dist/themes/one-dark.css"> -->
-        <link rel="stylesheet" href="../dist/themes/one-dark.css">
+        <link rel="stylesheet" href="../dist/themes/atom-one-dark.css">
         <script src="../dist/codecolor.js"></script>
         <style>
             .layer {
@@ -62,13 +62,13 @@
                 let code1 = document.getElementById('code1');
                 let code2 = document.getElementById('code2');
 
-                fetch('example/source.txt')
+                fetch('example/source2.txt')
                     .then(response => response.text())
                     .then(text => {
                         source.textContent = text;
 
-                        fetch('../dist/languages/javascript.json')
-                        // fetch('../dist/languages/json.json')
+                        // fetch('../dist/languages/javascript.json')
+                        fetch('../dist/languages/json.json')
                         // fetch('../dist/languages/css.json')
                         // fetch('../dist/languages/scss.json')
                         // fetch('../dist/languages/yaml.json')
