--- a/test/languages/markup/javascript/keywords.html
+++ b/test/languages/markup/javascript/keywords.html
@@ -1,5 +1,5 @@
 <pre><code class="cc-container"><span class="cc-keyword">function</span> <span class="cc-entity">test</span>() {
-    [<span class="cc-string">'test'</span>, <span class="cc-string">'keywords'</span>].<span class="cc-entity">forEach</span>((name, index)<span class="cc-keyword"> =></span> {
+    [<span class="cc-string">'test'</span>, <span class="cc-string">'keywords'</span>].<span class="cc-entity">forEach</span>((name, index)<span class="cc-symbol"> =></span> {
         <span class="cc-keyword">const</span> regExp <span class="cc-operator">=</span> <span class="cc-keyword">new</span> <span class="cc-constant">RegExp</span>(<span class="cc-string">/test/</span>, <span class="cc-string">'gm'</span>);
         <span class="cc-keyword">var</span> match;
 
