--- a/test/languages/markup/javascript/arrow-function.html
+++ b/test/languages/markup/javascript/arrow-function.html
@@ -1,5 +1,5 @@
-<pre><code class="cc-container"><span class="cc-keyword">const</span> sum <span class="cc-operator">=</span> (a, b)<span class="cc-keyword"> =></span> a <span class="cc-operator">+</span> b;
-<span class="cc-keyword">const</span> getTime <span class="cc-operator">=</span> ()<span class="cc-keyword"> =></span> {
+<pre><code class="cc-container"><span class="cc-keyword">const</span> sum <span class="cc-operator">=</span> (a, b)<span class="cc-symbol"> =></span> a <span class="cc-operator">+</span> b;
+<span class="cc-keyword">const</span> getTime <span class="cc-operator">=</span> ()<span class="cc-symbol"> =></span> {
     <span class="cc-keyword">let</span> date <span class="cc-operator">=</span> <span class="cc-keyword">new</span> <span class="cc-constant">Date</span>();
     <span class="cc-keyword">let</span> hours <span class="cc-operator">=</span> date.<span class="cc-entity">getHours</span>();
     <span class="cc-keyword">let</span> minutes <span class="cc-operator">=</span> date.<span class="cc-entity">getMinutes</span>();
