--- a/test/languages/markup/javascript/multiline-comment.html
+++ b/test/languages/markup/javascript/multiline-comment.html
@@ -1,4 +1,4 @@
-<pre><code class="cc-container"><span class="cc-comment">/*
+<pre><code class="cc-container"><span class="cc-comment cc-emphasis">/*
     line 1
     line ... // 123
     line N
